--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,19 @@
-# Copia a .env y coloca tus claves si las tienes:
-SERPAPI_KEY=
-BING_API_KEY=
-OUT_SCREENS=outputs/screens
+# .env.example - NO subir secretos reales
+PORT=3000
+
+# PayPal (cliente JS puede usar CLIENT_ID público; el SECRET va en servidor)
+PAYPAL_CLIENT_ID=
+PAYPAL_CLIENT_SECRET=
+
+# Bitso (API Key/Secret)
+BITSO_API_KEY=
+BITSO_API_SECRET=
+
+# Conekta / Openpay (para OXXO)
+CONEKTA_API_KEY=
+CONEKTA_API_SECRET=
+
+# Otros
+NODE_ENV=development
+LOG_LEVEL=info
+OUTPUT_SCREENS=outputs/screens
